Colaboratory를 통해 생성됨

--- a/1_Pandas_실습.ipynb
+++ b/1_Pandas_실습.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 데이터 준비하기 1\n",
+        "# 1. 데이터 준비하기\n",
         "\n",
         "1.   데이터를 불러온다.\n",
         "2.   종속변수와 독립변수로 분리한다.\n",
@@ -45,6 +45,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Pandas 불러오기"
+      ],
+      "metadata": {
+        "id": "frucVKiDCr-L"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd"
@@ -54,6 +63,15 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 파일들로부터 데이터 읽어오기"
+      ],
+      "metadata": {
+        "id": "o7Hq0kP5CxWT"
+      }
     },
     {
       "cell_type": "code",
@@ -74,6 +92,15 @@
       },
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 변수 속 데이터 모양 확인하기"
+      ],
+      "metadata": {
+        "id": "PX5FvKb0C5Ue"
+      }
     },
     {
       "cell_type": "code",
@@ -105,6 +132,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Column(열) 출력하기"
+      ],
+      "metadata": {
+        "id": "zsjp0mqrDFhU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Column(열) 이름 출력 -> ('열'들의 이름이 나옴)\n",
@@ -134,6 +170,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 원하는 Column 선택 및 나누기"
+      ],
+      "metadata": {
+        "id": "hx9RAkswDU3P"
+      }
     },
     {
       "cell_type": "code",
@@ -170,6 +215,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 상위 5개의 행 data 출력하기"
+      ],
+      "metadata": {
+        "id": "01vaUlGaDaO5"
+      }
     },
     {
       "cell_type": "code",
