--- a/2_레모네이드_판매_예측.ipynb
+++ b/2_레모네이드_판매_예측.ipynb
@@ -70,7 +70,7 @@
         "X = tf.keras.layers.Input(shape=[1])  # 1 -> 내가 준비한 \"독립변수의 개수\"가 1개 이므로 '1'\n",
         "Y = tf.keras.layers.Dense(1)(X)  # 1 -> 내가 준비한 \"종속변수의 개수\"가 1개 이므로 '1'\n",
         "model = tf.keras.models.Model(X,Y)\n",
-        "model.compile(loss='mse')"
+        "model.compile(loss='mse') # mse ->MSE(Mean Squared Error) 오차의 제곱에 대해 평균을 취한것, 작을 수록 추측한 값의 정확도가 높은 것"
       ],
       "metadata": {
         "id": "ORTV2R7DGChH"
