Colaboratory를 통해 생성됨

--- a/4_레모네이드_판매_예측(실습).ipynb
+++ b/4_레모네이드_판매_예측(실습).ipynb
@@ -6,7 +6,7 @@
       "name": "# 4_레모네이드_판매_예측(실습)",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOCzgiCNGoPLutF4anhp8a5",
+      "authorship_tag": "ABX9TyPTzcVCgb/P65Ap7tWW6rwY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,7 +258,7 @@
         "X = tf.keras.layers.Input(shape=[1])\n",
         "Y = tf.keras.layers.Dense(1)(X)\n",
         "model = tf.keras.models.Model(X, Y)\n",
-        "model.compile(loss='mse')"
+        "model.compile(loss='mse') # MSE(Mean Squared Error 오차의 제곱에 대한 평균, 작을수록 추측한값의 정확성이 높은 것)"
       ],
       "metadata": {
         "id": "eKEJYFWAM_XP"
