Colaboratory를 통해 생성됨

--- a/9_원핫인코딩.ipynb
+++ b/9_원핫인코딩.ipynb
@@ -6,7 +6,7 @@
       "name": "9_원핫인코딩",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPRUAo9VmjralMsmGnvA9NL",
+      "authorship_tag": "ABX9TyP6IYA2ETN0Un1Kswwv1Wm0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,33 @@
       ],
       "metadata": {
         "id": "ZUC83yDFMApk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 모델의 구조를 만든다\n",
+        "\n",
+        "X = tf.keras.layer.Input(shape=[4])\n",
+        "Y = tf.keras.Dense(3, activation='softmax')(X)\n",
+        "model = tf.keras.models.Model(X,Y)\n",
+        "model.compile(loss='categorical_crossentropy')"
+      ],
+      "metadata": {
+        "id": "bKTBNL_FOgmk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   따라서 위 모델의 구조를 만드는 코드에서 종속변수의 값이 '1'이아닌 '3'이 된어야 한다.\n"
+      ],
+      "metadata": {
+        "id": "w0aV_mAvOo3N"
       }
     },
     {
